--- a/views/attendance.html
+++ b/views/attendance.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="section" ng-if="absents.length>0">
-        <table class="highlight">
+        <table class="highlight" style="max-width:100%;overflow-x:auto;display:inline-block;">
             <thead>
                 <tr>
                     <th>Foto</th>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="section" ng-if="presents.length>0">
-        <table class="highlight">
+        <table class="highlight" style="max-width:100%;overflow-x:auto;display:inline-block;">
             <thead>
                 <tr>
                     <th>Foto</th>
