--- a/views/editor.html
+++ b/views/editor.html
@@ -2,7 +2,7 @@
   <!-- Lista de noticias -->
   <div class = "section"> 
     <h5 class="row" ng-if="news">Comunicados</h5>
-    <table class="highlight" ng-if="users">
+    <table class="highlight" ng-if="news" style="max-width:100%;overflow-x:auto;display:inline-block;">
       <thead>
         <tr>
           <th>Título</th>
@@ -26,8 +26,8 @@
             <a title="Editar" class="waves-effect waves-light blue darken-4 btn-small btn-floating z-depth=3 modal-trigger" data-target="edit_modal" ng-click="select(key)"><i class="material-icons">edit</i></a>
             <a title="Ver" class="waves-effect waves-light green darken-4 btn-floating btn-small z-depth=3 modal-trigger" data-target="view_modal" ng-click="select(key)"><i class="material-icons">visibility</i></a>
             <a title="Eliminar" class="waves-effect waves-light red darken-4 btn-floating btn-small z-depth=3 modal-trigger" data-target="confirm_modal" ng-click="select(key)"><i class="material-icons">delete</i></a>
-            <a title="Subir" class="waves-effect waves-light teal darken-2 btn-floating btn-small z-depth=3" ng-click="moveSelected(true,key);"><i class="material-icons">vertical_align_top</i></a>
-            <a title="Bajar" class="waves-effect waves-light teal darken-2 btn-floating btn-small z-depth=3" ng-click="moveSelected(false,key);"><i class="material-icons">vertical_align_bottom</i></a>
+            <a title="Subir" class="waves-effect waves-light teal darken-2 btn-floating btn-small z-depth=3 {{key > 0 ? '':'disabled'}}" ng-click="moveSelected(true,key);"><i class="material-icons">vertical_align_top</i></a>
+            <a title="Bajar" class="waves-effect waves-light teal darken-2 btn-floating btn-small z-depth=3 {{key < news.length-1 ? '':'disabled'}}" ng-click="moveSelected(false,key);"><i class="material-icons">vertical_align_bottom</i></a>
           </td>
         </tr>      
       </tbody>
