Login: input de confirmacion y boton de desofuscación de contraseña

--- a/views/hardware.html
+++ b/views/hardware.html
@@ -3,7 +3,7 @@
 </div>
 
 <center>
-    <div class="row">
+    <div class="row" ng-if="wssFound">
         <div class="input-field col s3 offset-s3">
             <select id="portSelect">
                 <option value="" selected>Elija una opción</option>
