Excluir admins de lista de asistencia y edicion de calificaciones. Template simulador de circuitos

--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
             <div>
                 <a><img src="images/newmainlogo.png" width="150px" /></a>
             </div>
-            <p class="center">Iniciar sesión en <span><img src="images/secondarylogo.png" width="100" align="top"/></span></p>
+            <p class="center">{{welcomeText}} <span><img src="images/secondarylogo.png" width="100" align="top"/></span></p>
             <form class="col s12" method="post" ng-init="showKey=false">
 
                 <div class="row" ng-show="login_mode==1">
