--- a/views/profile.html
+++ b/views/profile.html
@@ -13,6 +13,7 @@
 				<h5>LU: <i>{{user.lu}}</i></h5>
 				<h5 class="truncate"><i>{{user.degree}}</i></h5>
 				<p><b>Usuario desde:</b> {{created}}</p>
+				<p><b>Compañeros de comisión:</b> {{getUserNames(user.partners)}}</p>
 			</div>
 
 		</div>
