--- a/views/profile.html
+++ b/views/profile.html
@@ -18,10 +18,8 @@
 
 		</div>
 
-		<div class="row">
-			<div class="col offset-s6 s6">
-				<button ng-click="edit=true" type="button" class="btn green darken-4">Editar perfil</button>
-			</div>
+		<div class="row right">
+			<button ng-click="edit=true" type="button" class="btn green darken-4">Editar perfil</button>
 		</div>
 	</div>
 
@@ -34,44 +32,36 @@
 				<img class="responsive-img" src="{{newAvatar}}" style="cursor: pointer;" ng-click="uploadPic()">
 			</div>
 
-
 			<div class="col s12 m9 l9">
-				<div class="row">
-					<i class="col s1 material-icons">person</i>
-					<div class="input-field col s11">
-						<input placeholder="{{user.name}}" class="validate" id="inputName" type="text">
-						<label for="inputName">Nombre</label>
-					</div>
+				<div class="input-field">
+					<input placeholder="{{user.name}}" class="validate" id="inputName" type="text">
+					<label for="inputName"><i class="left material-icons">person</i>Nombre</label>
 				</div>
-
-				<div class="row">
-					<i class="col s1 material-icons">people</i>
-					<div class="input-field col s11">
-						<input placeholder="{{user.secondName}}" class="validate" id="inputSecondName" type="text">
-						<label for="inputSecondName">Apellido</label>
-					</div>
+				<div class="input-field">
+					<input placeholder="{{user.secondName}}" class="validate" id="inputSecondName" type="text">
+					<label for="inputSecondName"><i class="left material-icons">supervisor_account</i>Apellido</label>
 				</div>
-
-				<div class="row">
-					<i class="col s1 material-icons">credit_card</i>
-					<div class="input-field col s11">
-						<input placeholder="{{user.lu}}" class="validate" id="inputLU" type="number">
-						<label for="inputLU">LU</label>
-					</div>
+				<div class="input-field">
+					<input placeholder="{{user.lu}}" class="validate" id="inputLU" type="number">
+					<label for="inputLU"><i class="left material-icons">credit_card</i>LU</label>
 				</div>
-
-				<div class="row">
-					<i class="col s1 material-icons">school</i>
-					<div class="input-field col s11">
-						<select id="inputDegree" class="icons">
-							<option value="" disabled selected>Elija una opción</option>
-							<option value="Ing. Electrónica" data-icon="images/electronica.jpg">Ing. Electrónica</option>
-							<option value="Ing. Electricista" data-icon="images/electricista.jpg">Ing. Electricista</option>
-						</select>
-						<label>Carrera</label>
-					</div>
+				<div class="input-field">
+					<select id="inputDegree" class="icons">
+						<option value="" disabled selected>Elija una opción</option>
+						<option value="Ing. Electrónica" data-icon="images/electronica.jpg">Ing. Electrónica</option>
+						<option value="Ing. Electricista" data-icon="images/electricista.jpg">Ing. Electricista</option>
+					</select>
+					<label><i class="left material-icons">school</i>Carrera</label>
 				</div>
-
+				<div class="input-field col s12 m6">
+					<input class="autocomplete" id="partner1" type="text">
+					<label for="partner1"><i class="left material-icons">people</i>Compañero 1</label>
+				</div>
+				<div class="input-field col s12 m6">
+					<input class="autocomplete" id="partner2" type="text">
+					<label for="partner2"><i class="left material-icons">people</i>Compañero 2</label>
+				</div>
+			
 				<h6>Usuario desde: {{created}}</h6>
 			</div>
 
