--- a/views/sources.html
+++ b/views/sources.html
@@ -91,12 +91,10 @@
 
 <div id="pdf_viewer_modal" class="modal full-modal modal-fixed-footer">
   <div class="modal-content">
-    <canvas id="pdf_viewer_canvas" style="width: 100%"></canvas>
+      <object data="{{pdfURL}}" type="application/pdf" width="100%" height="100%"></object>
   </div>
   <div class="modal-footer">
-    <a class="left modal-close waves-effect waves-white btn green darken-1">Volver</a>
-    <a class="waves-effect waves-white btn green darken-2 {{currentPage==1 ? 'disabled':''}}" ng-click="prevPdfPage()">Anterior</a>
-    <a class="waves-effect waves-white btn green darken-3 {{currentPage==maxPages ? 'disabled':''}}" ng-click="nextPdfPage()">Siguiente</a>
+      <a class="left modal-close waves-effect waves-white btn blue-grey darken-1">Volver</a>
   </div>
 </div>
 
