--- a/views/users.html
+++ b/views/users.html
@@ -44,7 +44,7 @@
       <h4>Calificaciones</h4>
 
       <div class = "section"> 
-          <table class="highlight" style="max-width:100%;overflow-x:auto;display:inline-block;">
+          <table class="highlight">
             <thead>
               <tr>
                 <th>Actividad</th>
