En simulador, guardar solo componentes y conexiones en vez del modelo completo

--- a/views/simulator.html
+++ b/views/simulator.html
@@ -56,7 +56,7 @@
           </table>
     </div>
     <div class="modal-footer">      
-        <a class="modal-close waves-effect waves-white btn red darken-3">Cancelar</a>
+        <a class="modal-close waves-effect waves-white btn green darken-3">Cancelar</a>
     </div>
 </div>
 
@@ -70,6 +70,6 @@
     </div>
     <div class="modal-footer">      
         <a class="modal-close waves-effect waves-white btn red darken-3">Cancelar</a>
-        <a class="waves-effect waves-white btn green" ng-click="saveCircuit()">Guardar</a>
+        <a class="waves-effect waves-white btn green darken-3" ng-click="saveCircuit()">Guardar</a>
       </div>
 </div>
