--- a/views/sources.html
+++ b/views/sources.html
@@ -91,7 +91,7 @@
 
 <div id="pdf_viewer_modal" class="modal full-modal modal-fixed-footer">
   <div class="modal-content">
-      <object data="{{pdfURL}}" type="application/pdf" width="100%" height="100%"></object>
+      <object data="{{pdfURL | trusted}}" type="application/pdf" width="100%" height="100%"></object>
   </div>
   <div class="modal-footer">
       <a class="left modal-close waves-effect waves-white btn green darken-3">Volver</a>
