Scripts para envio de emails. Resultados de test FS

--- a/views/submissions.html
+++ b/views/submissions.html
@@ -132,7 +132,7 @@
     </div>
   </div>
 
-<div id="submission_modal" class="modal">
+<div id="submission_modal" class="modal wide-modal">
     <div class="modal-content">
       <h4>Detalles de la entrega</h4>
       <p><b>Actividad:</b> {{submissions[submKeyView].activityName}}</p>
