--- a/style/custom.css
+++ b/style/custom.css
@@ -59,6 +59,18 @@ body {
   border-radius: 10px;
 }
 
+/* Barras de resultados test */
+.progress-area {
+  width: 100%;
+  background-color: #ddd;
+}
+
+.progress-bar {
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  color: white;
+}
 
 /* Leds probador */
 .led-box {
