--- a/views/home.html
+++ b/views/home.html
@@ -1,17 +1,17 @@
 <div class="container">
-   
-    <h3>Novedades</h3> 
+
+    <h3>Novedades</h3>
 
     <div class="card hoverable z-depth-1" ng-repeat="entry in news" ng-show="entry.timestamp < now">
         <div class="right chip">
             <img src="{{users[entry.author].avatar}}">
             Publicado {{relativeTime(entry.timestamp)}} por {{users[entry.author].name}}
         </div>
-        <div class="card-content"> 
+        <div class="card-content">
             <h5><b>{{entry.title}}</b></h5>
             <div class="row" ng-bind-html=entry.content></div>
         </div>
-    </div>    
+    </div>
 
 </div>
 
@@ -19,34 +19,100 @@
 <div id="test_modal" class="modal {{test_FS ? 'wide-modal' : ''}} modal-fixed-footer">
     <div class="modal-content">
         <h5>Test Felder-Silverman sobre estilos de aprendizaje.</h5>
-        <div ng-show="!test_FS">
-            <p>Si dispone de unos minutos, nos gustaría que complete un test conformado por un cuestionario de 44 preguntas.</p> 
+        <div ng-show="testStatus==0">
+            <p>Si dispone de unos minutos, nos gustaría que complete un test conformado por un cuestionario de 44
+                preguntas.</p>
             <p>Este test evaluará su estilo de aprendizaje de preferencia y la magnitud de esa preferencia.</p>
             <p>¿Desea continuar en este momento?</p>
         </div>
-        
-        <div ng-show="test_FS">
-            <p>Lea con atención y responda las siguientes preguntas seleccionando la respuesta que mejor describa lo que le ocurre. Si ambas opciones parecen aplicarse a usted, seleccione aquella que se aplique más frecuentemente.</p>
+
+        <div ng-show="testStatus==1 || testStatus==2">
+            <p>Lea con atención y responda las siguientes preguntas seleccionando la respuesta que mejor describa lo que
+                le ocurre. Si ambas opciones parecen aplicarse a usted, seleccione aquella que se aplique más
+                frecuentemente.</p>
             <ul>
-                <li ng-repeat="quest in test_FS track by $index" class="{{incomplete[$index] ? 'red-text' : 'black-text'}}">    
+                <li ng-repeat="quest in test_FS track by $index"
+                    class="{{incomplete[$index] ? 'red-text' : 'black-text'}}">
                     <p><b>{{$index+1}}.-</b> <a class="black-text" ng-bind-html="quest.text"></a></p>
                     <span>
                         <p>
                             <label ng-repeat="optionText in quest.options track by $index">
-                                <input ng-checked="results.answers[$parent.$index] == $index" name="quest_{{$parent.$index}}" type="radio" id="opt_stat_{{$parent.$index}}_{{$index}}" ng-click="putOption($parent.$index, $index)" />
+                                <input ng-checked="results.answers[$parent.$index] == $index"
+                                    name="quest_{{$parent.$index}}" type="radio"
+                                    id="opt_stat_{{$parent.$index}}_{{$index}}"
+                                    ng-click="putOption($parent.$index, $index)" />
                                 <span for="opt_stat_{{$parent.$index}}_{{$index}}">{{optionText}}</span>
                                 <br>
-                            </label> 
+                            </label>
                         </p>
                     </span>
                 </li>
             </ul>
         </div>
+
+        <div ng-show="testStatus==3">
+            <p><b>Resultados</b></p>
+            <div class="row">
+                <div class="col s2">
+                    Activo
+                </div>
+                <div class="progress-area col s8">
+                    <div class="progress-bar" id="scale_0" style="background-color: #08088A"></div>
+                </div>
+                <div class="col s2">
+                    Reflexivo
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s2">
+                    Sensorial
+                </div>
+                <div class="progress-area col s8">
+                    <div class="progress-bar" id="scale_1" style="background-color: #8A0808"></div>
+                </div>
+                <div class="col s2">
+                    Intuitivo
+                </div>
+            </div>
+            <div class="row">
+                    <div class="col s2">
+                        Visual
+                    </div>
+                    <div class="progress-area col s8">
+                        <div class="progress-bar" id="scale_2" style="background-color: #0B610B"></div>
+                    </div>
+                    <div class="col s2">
+                        Verbal
+                    </div>
+                </div>
+            <div class="row">
+                <div class="col s2">
+                    Secuencial
+                </div>
+                <div class="progress-area col s8">
+                    <div class="progress-bar" id="scale_3" style="background-color: #886A08"></div>
+                </div>
+                <div class="col s2">
+                    Global
+                </div>
+            </div>
+            <p><b>Perfil</b></p>
+            <ul>
+                <li id="prof_0"></li>
+                <li id="prof_1"></li>
+                <li id="prof_2"></li>
+                <li id="prof_3"></li>
+            </ul>
+            
+        </div>
     </div>
-  
-    <div class="modal-footer">      
-      <a class="modal-close waves-effect waves-white btn red darken-3" ng-show="!test_FS">Más tarde</a>
-      <a class="waves-effect waves-white btn green darken-3" ng-click="loadTest()" ng-show="!test_FS">Continuar</a>
-      <a class="waves-effect waves-white btn green darken-3 {{testComplete ? '':'disabled'}}" ng-click="saveTestResults()" ng-show="test_FS">Finalizar</a>
+
+    <div class="modal-footer">
+        <a class="modal-close waves-effect waves-white btn red darken-3" ng-show="testStatus==0">Más tarde</a>
+        <a class="waves-effect waves-white btn green darken-3" ng-click="loadTest()"
+            ng-show="testStatus==0">Continuar</a>
+        <a class="waves-effect waves-white btn green darken-3 {{testStatus==2 ? '':'disabled'}}"
+            ng-click="saveTestResults()" ng-show="testStatus==1 || testStatus==2">Evaluar</a>
+        <a class="modal-close waves-effect waves-white btn green darken-3" ng-show="testStatus==3">Finalizar</a>
     </div>
-  </div>
+</div>
