--- a/style/custom.css
+++ b/style/custom.css
@@ -39,6 +39,13 @@ body {
   display: none
 }
 
+.overlay-img {
+  cursor: pointer; 
+  position: absolute; 
+  top:0; 
+  display:block; 
+  margin: auto; 
+}
 
 /* Modals de tamanio personalizado */
 .wide-modal {
