--- a/views/users.html
+++ b/views/users.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Lista de usuarios -->
-  <div class = "section"> 
+  <div class="section">
     <h5 class="row" ng-if="users">Usuarios</h5>
     <table class="highlight" ng-if="users" style="max-width:100%;overflow-x:auto;display:inline-block;">
       <thead>
@@ -17,115 +17,123 @@
       <tbody>
         <tr ng-repeat="(key,row) in users" ng-click="select(key)">
           <td><img class="circle" src="{{row.avatar}}" height="50px" width="50px"></td>
-          <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer">
-            {{row.name}} {{row.secondName}}  <i class="material-icons" style="vertical-align:middle;" ng-if="row.admin">security</i>
+          <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer"
+            ng-click="evalTestFS(key)">
+            {{row.name}} {{row.secondName}} <i class="material-icons" style="vertical-align:middle;"
+              ng-if="row.admin">security</i>
           </td>
           <td>{{row.email}}</td>
-          <td>{{row.lu}} <span title="Usuario aprobado" ng-if="row.enrolled" class="new badge green" data-badge-caption="inscr"></span></td>
+          <td>{{row.lu}} <span title="Usuario aprobado" ng-if="row.enrolled" class="new badge green"
+              data-badge-caption="inscr"></span></td>
           <td>{{row.degree}}</td>
           <td width="1%" style="white-space:nowrap;">
-            <a title="Enviar mensaje" class="waves-effect waves-light teal darken-3 btn-small btn-floating z-depth-3 modal-trigger" data-target="message_modal"><i class="material-icons">mail_outline</i></a>
-            <a title="Calificaciones" class="waves-effect waves-light orange btn-floating btn-small z-depth-3" ng-show="row.enrolled && !row.admin" ng-click="startScoresModal(key)"><i class="material-icons">playlist_add_check</i></a>
-            <a title="Aprobar" class="waves-effect waves-light red btn-floating btn-small z-depth-3 modal-trigger" data-target="confirm_enroll_modal" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
+            <a title="Enviar mensaje"
+              class="waves-effect waves-light teal darken-3 btn-small btn-floating z-depth-3 modal-trigger"
+              data-target="message_modal"><i class="material-icons">mail_outline</i></a>
+            <a title="Calificaciones" class="waves-effect waves-light orange btn-floating btn-small z-depth-3"
+              ng-show="row.enrolled && !row.admin" ng-click="startScoresModal(key)"><i
+                class="material-icons">playlist_add_check</i></a>
+            <a title="Aprobar" class="waves-effect waves-light red btn-floating btn-small z-depth-3 modal-trigger"
+              data-target="confirm_enroll_modal" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
           </td>
-        </tr>      
+        </tr>
       </tbody>
     </table>
   </div>
 </div>
 
 <div id="scores_modal" class="modal wide-modal modal-fixed-footer">
-    <div class="modal-content">
-      
-      <h5><b>Alumno:</b> {{users[selectedKey].name}} {{users[selectedKey].secondName}}</h5>
-      <h5><b>LU:</b> {{users[selectedKey].lu}}</h5>
-      <div class="divider"></div>
-      
-      <h4>Calificaciones</h4>
+  <div class="modal-content">
 
-      <div class = "section"> 
-          <table class="highlight">
-            <thead>
-              <tr>
-                <th>Actividad</th>
-                <th>Nota</th>
-                <th>Valor</th>
-                <th>Evaluó</th>
-                <th>Fecha</th>
-              </tr>
-            </thead>
-      
-            <tbody>
-              <tr class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}" 
-              ng-repeat="(key,row) in activities" ng-show="row.value">
-                <td>{{row.name}}</td>
-                <td>    
-                  <div class="input-field" >
-                      <input class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}" 
-                      type="number" min="0" max="100" step="1" ng-model="auxiliaryScores[row.id].score"
-                      ng-change="auxiliaryScores[row.id].evaluator=user.uid;auxiliaryScores[row.id].timestamp=getTime(0)">
-                  </div>                  
-                </td>
-                <td>{{row.value}}</td>
-                <td title="Eliminar nota">
-                  <div class="chip" ng-if="auxiliaryScores[row.id].evaluator" ng-click="auxiliaryScores[row.id]=null;">
-                    <img src="{{users[auxiliaryScores[row.id].evaluator].avatar}}">
-                    {{users[auxiliaryScores[row.id].evaluator].name}}
-                  </div>
-                </td>
-                <td>
-                  <p ng-show="auxiliaryScores[row.id]">{{getTime(4,auxiliaryScores[row.id].timestamp)}}</p>
-                </td>
-              </tr>      
-            </tbody>
-          </table>
-        </div>
+    <h5><b>Alumno:</b> {{users[selectedKey].name}} {{users[selectedKey].secondName}}</h5>
+    <h5><b>LU:</b> {{users[selectedKey].lu}}</h5>
+    <div class="divider"></div>
 
-        <h4>Entregas</h4>
+    <h4>Calificaciones</h4>
 
-        <div class = "section"> 
-          <table class="highlight">
-            <thead>
-              <tr>
-                <th>Actividad</th>
-                <th>Vencimiento</th>
-                <th>Entrega</th>
-                <th>Costo</th>
-                <th>Evaluó</th>
-                <th>Fecha</th>
-              </tr>
-            </thead>
-      
-            <tbody>
-              <tr class="{{auxiliarySubmits[row.id].submitted!=users[selectedKey].submits[row.id].submitted?'red-text':''}}" 
-              ng-repeat="(key,row) in activities track by $index" ng-show="row.dl">
-                <td>{{row.name}}</td>
-                <td>{{getTime(4,row.dl.date)}}</td>
-                <td>    
-                  <input type="date" id="{{row.id}}">
-                </td>
-                <td>
-                  {{getCost(key)}}
-                </td>
-                <td title="Eliminar nota">
-                  <div class="chip" ng-if="auxiliarySubmits[row.id].evaluator" ng-click="deleteSubmit(row.id)">
-                    <img src="{{users[auxiliarySubmits[row.id].evaluator].avatar}}">
-                    {{users[auxiliarySubmits[row.id].evaluator].name}}
-                  </div>
-                </td>
-                <td>
-                  <p ng-show="auxiliarySubmits[row.id]">{{getTime(4,auxiliarySubmits[row.id].timestamp)}}</p>
-                </td>
-              </tr>      
-            </tbody>
-          </table>
-        </div>    
-    </div>  
-    
-    <div class="modal-footer">      
-      <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
-      <a class="waves-effect waves-white btn red darken-4" ng-click="saveScores()">Guardar</a>
+    <div class="section">
+      <table class="highlight">
+        <thead>
+          <tr>
+            <th>Actividad</th>
+            <th>Nota</th>
+            <th>Valor</th>
+            <th>Evaluó</th>
+            <th>Fecha</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}"
+            ng-repeat="(key,row) in activities" ng-show="row.value">
+            <td>{{row.name}}</td>
+            <td>
+              <div class="input-field">
+                <input class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}"
+                  type="number" min="0" max="100" step="1" ng-model="auxiliaryScores[row.id].score"
+                  ng-change="auxiliaryScores[row.id].evaluator=user.uid;auxiliaryScores[row.id].timestamp=getTime(0)">
+              </div>
+            </td>
+            <td>{{row.value}}</td>
+            <td title="Eliminar nota">
+              <div class="chip" ng-if="auxiliaryScores[row.id].evaluator" ng-click="auxiliaryScores[row.id]=null;">
+                <img src="{{users[auxiliaryScores[row.id].evaluator].avatar}}">
+                {{users[auxiliaryScores[row.id].evaluator].name}}
+              </div>
+            </td>
+            <td>
+              <p ng-show="auxiliaryScores[row.id]">{{getTime(4,auxiliaryScores[row.id].timestamp)}}</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+
+    <h4>Entregas</h4>
+
+    <div class="section">
+      <table class="highlight">
+        <thead>
+          <tr>
+            <th>Actividad</th>
+            <th>Vencimiento</th>
+            <th>Entrega</th>
+            <th>Costo</th>
+            <th>Evaluó</th>
+            <th>Fecha</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr class="{{auxiliarySubmits[row.id].submitted!=users[selectedKey].submits[row.id].submitted?'red-text':''}}"
+            ng-repeat="(key,row) in activities track by $index" ng-show="row.dl">
+            <td>{{row.name}}</td>
+            <td>{{getTime(4,row.dl.date)}}</td>
+            <td>
+              <input type="date" id="{{row.id}}">
+            </td>
+            <td>
+              {{getCost(key)}}
+            </td>
+            <td title="Eliminar nota">
+              <div class="chip" ng-if="auxiliarySubmits[row.id].evaluator" ng-click="deleteSubmit(row.id)">
+                <img src="{{users[auxiliarySubmits[row.id].evaluator].avatar}}">
+                {{users[auxiliarySubmits[row.id].evaluator].name}}
+              </div>
+            </td>
+            <td>
+              <p ng-show="auxiliarySubmits[row.id]">{{getTime(4,auxiliarySubmits[row.id].timestamp)}}</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+    <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
+    <a class="waves-effect waves-white btn red darken-4" ng-click="saveScores()">Guardar</a>
+  </div>
 </div>
 
 <div id="view_modal" class="modal wide-modal">
@@ -135,14 +143,72 @@
         <img class="responsive-img" src="{{users[selectedKey].avatar}}"></a>
       </div>
       <div class="col s6">
-        <h4>{{users[selectedKey].name}} {{users[selectedKey].secondName}} <a ng-if="users[selectedKey].admin">[admin]</a></h4>
-        <h5 class="truncate"><i>{{users[selectedKey].email}}</i></h5>		
-        <h5><b>LU:</b> <i>{{users[selectedKey].lu}}</i></h5>		
-        <h5 class="truncate"><i>{{users[selectedKey].degree}}</i></h5>				
-        <p><b>Usuario desde:</b> <i>{{users[selectedKey].enrolled?getTime(3,users[selectedKey].enrolled):"(Usuario no aprobado)"}}</i></p>
-        <p><b>Último acceso:</b> <i>{{readableTime(users[selectedKey].activity.last_login)}} ({{relativeTime(users[selectedKey].activity.last_login)}})</i></p>
+        <h4>{{users[selectedKey].name}} {{users[selectedKey].secondName}} <a
+            ng-if="users[selectedKey].admin">[admin]</a></h4>
+        <h5 class="truncate"><i>{{users[selectedKey].email}}</i></h5>
+        <h5><b>LU:</b> <i>{{users[selectedKey].lu}}</i></h5>
+        <h5 class="truncate"><i>{{users[selectedKey].degree}}</i></h5>
+        <p><b>Usuario desde:</b>
+          <i>{{users[selectedKey].enrolled?getTime(3,users[selectedKey].enrolled):"(Usuario no aprobado)"}}</i></p>
+        <p><b>Último acceso:</b> <i>{{readableTime(users[selectedKey].activity.last_login)}}
+            ({{relativeTime(users[selectedKey].activity.last_login)}})</i></p>
         <p><b>Compañeros de comisión:</b> {{getUserNames(users[selectedKey].partners)}}</p>
-      </div>	
+        <div ng-show="users[selectedKey].test_fs">
+          <div class="divider"></div>
+          <p><b>Test Felder & Silverman</b></p>
+          <div class="row">
+            <div class="col s2">
+              Activo
+            </div>
+            <div class="progress-area col s8">
+              <div class="progress-bar" id="scale_0" style="background-color: #08088A"></div>
+            </div>
+            <div class="col s2">
+              Reflexivo
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s2">
+              Sensorial
+            </div>
+            <div class="progress-area col s8">
+              <div class="progress-bar" id="scale_1" style="background-color: #8A0808"></div>
+            </div>
+            <div class="col s2">
+              Intuitivo
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s2">
+              Visual
+            </div>
+            <div class="progress-area col s8">
+              <div class="progress-bar" id="scale_2" style="background-color: #0B610B"></div>
+            </div>
+            <div class="col s2">
+              Verbal
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s2">
+              Secuencial
+            </div>
+            <div class="progress-area col s8">
+              <div class="progress-bar" id="scale_3" style="background-color: #886A08"></div>
+            </div>
+            <div class="col s2">
+              Global
+            </div>
+          </div>
+          <ul>
+            <li id="prof_0"></li>
+            <li id="prof_1"></li>
+            <li id="prof_2"></li>
+            <li id="prof_3"></li>
+          </ul>
+          <div class="divider"></div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -157,23 +223,24 @@
     </div>
   </div>
 
-  <div class="modal-footer">      
+  <div class="modal-footer">
     <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
     <a class="waves-effect waves-white btn red darken-4" ng-click="sendMessage()">Enviar</a>
   </div>
-</div> 
+</div>
 
 <div id="confirm_enroll_modal" class="modal">
   <div class="modal-content">
-    
+
     <h5>Confirme la operación</h5>
-    <p>¿Desea aprobar el registro del usuario {{users[selectedKey].name}} {{users[selectedKey].secondName}} como alumno?</p>
-    <p>El usuario aparecerá en los listados de alumnos para tomar asistencia o evaluar calificaciones y podrá ver el progreso de sus notas en la sección de dashboard.</p>
+    <p>¿Desea aprobar el registro del usuario {{users[selectedKey].name}} {{users[selectedKey].secondName}} como alumno?
+    </p>
+    <p>El usuario aparecerá en los listados de alumnos para tomar asistencia o evaluar calificaciones y podrá ver el
+      progreso de sus notas en la sección de dashboard.</p>
   </div>
 
-  <div class="modal-footer">      
+  <div class="modal-footer">
     <a class="modal-close waves-effect waves-white btn green darken-4">Cancelar</a>
     <a class="waves-effect waves-white btn red darken-4" ng-click="enrollUser()">Confirmar</a>
   </div>
 </div>
-
