--- a/views/submissions.html
+++ b/views/submissions.html
@@ -145,7 +145,7 @@
             <tr>
               <th>Fecha/hora</th>
               <th>Usuario</th>
-              <th>Acción</th>
+              <th>Estado</th>
               <th>Observaciones</th>
             </tr>
           </thead>
