--- a/views/home.html
+++ b/views/home.html
@@ -23,6 +23,8 @@
             <p>Si dispone de unos minutos, nos gustaría que complete un test conformado por un cuestionario de 44
                 preguntas.</p>
             <p>Este test evaluará su estilo de aprendizaje de preferencia y la magnitud de esa preferencia.</p>
+            <p>Al finalizar, podrá consultar los resultados en su perfil.</p>
+            <br>
             <p>¿Desea continuar en este momento?</p>
         </div>
 
@@ -50,60 +52,8 @@
             </ul>
         </div>
 
-        <div ng-show="testStatus==3">
-            <p><b>Resultados</b></p>
-            <div class="row">
-                <div class="col s2">
-                    Activo
-                </div>
-                <div class="progress-area col s8">
-                    <div class="progress-bar" id="scale_0" style="background-color: #08088A"></div>
-                </div>
-                <div class="col s2">
-                    Reflexivo
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s2">
-                    Sensorial
-                </div>
-                <div class="progress-area col s8">
-                    <div class="progress-bar" id="scale_1" style="background-color: #8A0808"></div>
-                </div>
-                <div class="col s2">
-                    Intuitivo
-                </div>
-            </div>
-            <div class="row">
-                    <div class="col s2">
-                        Visual
-                    </div>
-                    <div class="progress-area col s8">
-                        <div class="progress-bar" id="scale_2" style="background-color: #0B610B"></div>
-                    </div>
-                    <div class="col s2">
-                        Verbal
-                    </div>
-                </div>
-            <div class="row">
-                <div class="col s2">
-                    Secuencial
-                </div>
-                <div class="progress-area col s8">
-                    <div class="progress-bar" id="scale_3" style="background-color: #886A08"></div>
-                </div>
-                <div class="col s2">
-                    Global
-                </div>
-            </div>
-            <p><b>Perfil</b></p>
-            <ul>
-                <li id="prof_0"></li>
-                <li id="prof_1"></li>
-                <li id="prof_2"></li>
-                <li id="prof_3"></li>
-            </ul>
-        </div>
+        <test-results answers="{{testFSAnswers}}" ng-show="testStatus==3"></test-results>
+        
     </div>
 
     <div class="modal-footer">
