--- a/views/users.html
+++ b/views/users.html
@@ -17,8 +17,7 @@
       <tbody>
         <tr ng-repeat="(key,row) in users" ng-click="select(key)">
           <td><img class="circle" src="{{row.avatar}}" height="50px" width="50px"></td>
-          <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer"
-            ng-click="evalTestFS(key)">
+          <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer">
             {{row.name}} {{row.secondName}} <i class="material-icons" style="vertical-align:middle;"
               ng-if="row.admin">security</i>
           </td>
@@ -155,57 +154,7 @@
         <p><b>Compañeros de comisión:</b> {{getUserNames(users[selectedKey].partners)}}</p>
         <div ng-show="users[selectedKey].test_fs">
           <div class="divider"></div>
-          <p><b>Test Felder & Silverman</b></p>
-          <div class="row">
-            <div class="col s2">
-              Activo
-            </div>
-            <div class="progress-area col s8">
-              <div class="progress-bar" id="scale_0" style="background-color: #08088A"></div>
-            </div>
-            <div class="col s2">
-              Reflexivo
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s2">
-              Sensorial
-            </div>
-            <div class="progress-area col s8">
-              <div class="progress-bar" id="scale_1" style="background-color: #8A0808"></div>
-            </div>
-            <div class="col s2">
-              Intuitivo
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s2">
-              Visual
-            </div>
-            <div class="progress-area col s8">
-              <div class="progress-bar" id="scale_2" style="background-color: #0B610B"></div>
-            </div>
-            <div class="col s2">
-              Verbal
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s2">
-              Secuencial
-            </div>
-            <div class="progress-area col s8">
-              <div class="progress-bar" id="scale_3" style="background-color: #886A08"></div>
-            </div>
-            <div class="col s2">
-              Global
-            </div>
-          </div>
-          <ul>
-            <li id="prof_0"></li>
-            <li id="prof_1"></li>
-            <li id="prof_2"></li>
-            <li id="prof_3"></li>
-          </ul>
+          <test-results answers="{{users[selectedKey].test_fs.answers}}"></test-results>
           <div class="divider"></div>
         </div>
       </div>
