Actualizacion librerias de highcharts. Grafico de barras para lista de notas del curso

--- a/views/stats.html
+++ b/views/stats.html
@@ -1,7 +1,11 @@
 <div class="container">
 
     <h3>Estadísticas</h3>
-
-    <h4 class="center grey-text"><i>Sección en desarrollo</i></h4>
     
+    <div id="barplot_container"></div>
+
+    <div class="right">
+        <a class="waves-effect waves-white btn green darken-4" ng-click="drillUp()">Drill up</a>
+    </div>
+
 </div>
