Grafico de barras con calificaciones por alumnos y de principales actividades

--- a/views/stats.html
+++ b/views/stats.html
@@ -1,11 +1,14 @@
 <div class="container">
 
     <h3>Estadísticas</h3>
-    
-    <div id="barplot_container"></div>
 
-    <div class="right">
-        <a class="waves-effect waves-white btn green darken-4" ng-click="drillUp()">Drill up</a>
+    <div class="card hoverable z-depth-1">
+        <div class="card-content">
+            <div id="barplot_container"></div>
+            <div class="right">
+                <a class="waves-effect waves-white btn green darken-4" ng-click="drillUp()">Contraer</a>
+            </div>
+        </div>
     </div>
 
 </div>
