Lista de calificaciones de todos los alumnos en dashboard para comparar posiciones

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -33,6 +33,18 @@
     </div>    
 </div>
 
+<!-- Posicion dentro del curso -->
+<div class="row">
+    <div class="card hoverable z-depth-1">
+        <div class="card-content">
+            <div id="barplot_container"></div>
+            <div class="right">
+                <a class="waves-effect waves-white btn green darken-4" ng-click="drillUp()">Contraer</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row">    
     <!-- Proximos eventos -->
     <div class="col {{user ? 's12 m6 l6':'s12'}}">    
