Fondo en vista de login

--- a/style/custom.css
+++ b/style/custom.css
@@ -34,6 +34,11 @@ body {
   background: rgba(210, 210, 210, 0.7)!important;
 }
 
+.body-login{
+  background-image: linear-gradient(to right, rgba(245, 246, 252, 0.5), rgba(19, 85, 12, 1)), url('../images/forest.jpg');
+  background-size:cover;
+}
+
 /* Ocultar boton de drillup de sunburst */
 .highcharts-drillup-button {
   display: none
