--- a/views/login.html
+++ b/views/login.html
@@ -56,7 +56,7 @@
                     <div ng-hide="login_mode!=1" class="input-field col s12">
                         <i class="material-icons prefix">vpn_key</i>
                         <input class="validate black-text" name="passwordConfirm" id="passwordConfirm" type="password" ng-model="passwordConfirm" />
-                        <label for="passwordConfirm">Repetir ontraseña</label>
+                        <label for="passwordConfirm">Repetir contraseña</label>
                     </div>
                 </div>
 
